syntax = "proto2";
package message;
import "message.proto";

message C_A_LoginRequest{
required Ipacket PacketHead = 1;
required string AccountName = 2;
required string BuildNo = 3;
required int32  SocketId = 4;
//required string Password = 5;
}

message C_A_LoginRequest1{
required C_A_LoginRequest Login= 1;
}

message C_A_RegisterRequest{
required Ipacket PacketHead = 1;
required string AccountName = 2;
required int32  SocketId = 3;
//required string Password = 4;
}

message C_W_CreatePlayerRequest{
required Ipacket PacketHead = 1;
required string PlayerName = 2;
required int32  Sex = 3;
}

message C_W_Game_LoginRequset{
required Ipacket PacketHead = 1;
required int64	PlayerId =2;
}

message C_G_LogoutResponse{
required Ipacket PacketHead = 1;
}

message C_W_ChatMessage{
required Ipacket PacketHead = 1;
required int64	Sender = 2;
required int64	Recver = 3;
required int32	MessageType = 4;
required string	Message = 5;
}

message W_C_ChatMessage{
required Ipacket PacketHead = 1;
required int64	Sender = 2;
required string	SenderName = 3;
required int64	Recver = 4;
required string	RecverName = 5;
required int32	MessageType = 6;
required string	Message = 7;
}